--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm install npm run build",
-    "start": "node server.js",
+    "build": "npm install",
+    "start": "vercel dev",
     "dev": "nodemon server.js"
   },
   "engines": {
